--- a/fe/assets/css/main.css
+++ b/fe/assets/css/main.css
@@ -1,11 +1,121 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'MS Sans Serif';
+  src: url('~/assets/fonts/ms-sans-serif-1.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Retro';
+  src: url('~/assets/fonts/retro.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'PX Sans Nouveaux';
+  src: url('~/assets/fonts/px_sans_nouveaux.woff2') format('woff2');
+  /* src: url('https://fonts.gstatic.com/s/pxsansnouveaux/v1/pxsn-4x7b2
+3
+4-2x7b23-2x7b23-2x7b23-2x7b23.woff2') format('woff2'); */
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+::-webkit-scrollbar{
+  width: 0px;
+  height: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: #00008000;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #c0c0c000;
+}
+
+.taskbar-3d {
+  background: linear-gradient(to top, #0a246a, #3a6ea5); /* XP blue gradient */
+  border-top: 2px solid #ffffff63;
+  border-left: 2px solid #ffffff3e;
+  border-right: 2px solid #404040;
+  border-bottom: 2px solid #404040;
+
+  box-shadow:
+    inset 0 .5px 0 rgba(255, 255, 255, 0.3),
+    inset 0 -.5px 0 rgba(0, 0, 0, 0.2);
+  font-family: 'Tahoma', 'Microsoft Sans Serif', sans-serif;
+}
+
+/* .taskbar-3dcose {
+  background: linear-gradient(to top, #6a0a0a, #a53a3a);
+  border-top: 2px solid #ffffffd6;
+  border-left: 2px solid #ffffff3e;
+  border-right: 2px solid #404040;
+  border-bottom: 2px solid #404040;
+
+  box-shadow:
+    inset 0 .5px 0 rgba(255, 255, 255, 0.3),
+    inset 0 -.5px 0 rgba(0, 0, 0, 0.2);
+  font-family: 'Tahoma', 'Microsoft Sans Serif', sans-serif;
+} */
+
+.start-button {
+  background: linear-gradient(to top, #0a7a22, #34d058); /* green XP style gradient */
+  border-top: 2px solid #00000060;
+  border-left: 2px solid #00000060;
+  border-right: 2px solid #166c14;
+  border-bottom: 2px solid #166c14;
+
+  box-shadow:
+    inset 0 .5px 0 rgba(255, 255, 255, 0.4),
+    inset 0 -.5px 0 rgba(0, 0, 0, 0.2);
+  font-family: 'Tahoma', 'Microsoft Sans Serif', sans-serif;
+  color: white;
+}
+
+.start-button:hover {
+  background: linear-gradient(to top, #0d9e2a, #49e675);
+}
+
 body {
+  font-family: 'MS Sans Serif', sans-serif;
+  /* font-family: 'Retro'; */
+  font-family: Tahoma;
+  /* font-family: 'PX Sans Nouveaux'; */
     margin: 0;
-    font-family: Arial, sans-serif;
+    cursor: url('/curs.cur') 16 16, auto;
+    /* font-family: Arial, sans-serif; */
     background-color: #000000;
   }
   
+  body {
+    -webkit-text-stroke: 0.2px black; 
+    color: white; 
+  }
+/* 
+  body {
+    color: white; 
+    text-shadow:
+      -.5px -.5px 0 black,
+       .5px -.5px 0 black,
+      -.5px  .5px 0 black,
+       .5px  .5px 0 black;
+  } */
+  
+  
+  a{
+    cursor: url('/link.cur') 16 16, auto;
+  }
+
+  button{
+    cursor: url('/link.cur') 16 16, auto;
+  }
+
   h1 {
     font-size: 2rem;
   }
@@ -14,6 +124,17 @@ body {
     font-size: 1rem;
   }
 
+  /* .window {
+    border: 2px solid #000080;
+    background-color: #C0C0C0;
+    position: absolute;
+    background-image: url('/path/to/top-left-corner.gif'), url('/path/to/top-right-corner.gif'),
+                      url('/path/to/bottom-left-corner.gif'), url('/path/to/bottom-right-corner.gif');
+    background-position: top left, top right, bottom left, bottom right;
+    background-repeat: no-repeat;
+  } */
+
+  
   /* Noise Layer */
   body::before {
     content: '';
@@ -27,7 +148,7 @@ body {
     background-image: url("https://st4.depositphotos.com/1026531/30839/i/450/depositphotos_308395272-stock-photo-tv-screen-no-signal-static.jpg");
     background-repeat: repeat;
     background-size: 700px 700px;
-    opacity: 0.05;
+    opacity: 0.07;
     animation: subtleStatic 2s steps(8) infinite;
     z-index: 9999;
     mix-blend-mode: multiply;
